--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "class-examples",
+  "name": "keepcoding bootcamp 2019",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
