--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,7 @@
-pool:
-  name: Azure Pipelines
-steps:
+
 - task: Docker@2
-  displayName: buildAndPush
   inputs:
     containerRegistry: 'kevinccbsg docker hub'
-    repository: 'Guidesmiths curso'
+    repository: 'Curso Guidesmiths'
+    command: 'buildAndPush'
+    Dockerfile: '**/Dockerfile'
