--- a/solution/package.json
+++ b/solution/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "class",
+  "name": "keepcoding-bootcamp-2019",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "server": "./node_modules/.bin/http-server . -c-1"
+    "server": "./node_modules/.bin/http-server . -c-1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "http-server": "^0.11.1"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
