--- a/solution/package.json
+++ b/solution/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^6.3.0",
     "http-server": "^0.11.1"
   },
   "dependencies": {
