--- a/solution/package.json
+++ b/solution/package.json
@@ -5,14 +5,16 @@
   "main": "index.js",
   "scripts": {
     "server": "./node_modules/.bin/http-server . -c-1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "lint": "./node_modules/.bin/eslint src"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "eslint": "^6.3.0",
-    "http-server": "^0.11.1"
+    "http-server": "^0.11.1",
+    "husky": "^3.0.5"
   },
   "dependencies": {
     "express": "^4.17.1"
